<resources>
    <string name="app_name">Temperature and Humidity Control</string>
    <string name="textview">TextView</string>
    <string name="threshold_temperature">Temperature Range</string>
    <string name="threshold_humidity">Humidity Range</string>
    <string name="filter">Filter</string>
    <string name="temperature_filter">Temperature</string>
    <string name="humidity_filter">Humidity</string>
    <string name="temperature_view">Temperature</string>
    <string name="humidity_view">Humidity</string>
</resources>